<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/recover_pass_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/animate_gradient"
        tools:context=".presentation.sign_up.SignUpActivity">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:background="@color/login_form_detail"
            android:padding="16dp"
            android:hint="@string/email_placeholder"
            android:id="@+id/password_field"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/title_view"/>
    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="24dp"
            android:id="@+id/guideline_left"/>
    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline_right"
            app:layout_constraintGuide_end="24dp"/>
    <TextView
            android:text="@string/recover_pass_placeholder"
            android:layout_width="0dp"
            android:textSize="20dp"
            android:layout_height="wrap_content"
            android:id="@+id/title_view"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            android:layout_marginEnd="8dp" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/logo_image"/>
    <Button

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_background"
            android:text="@string/send_email_placeholder"
            android:textColor="@color/login_form_detail"
            android:id="@+id/recover_btn" android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/password_field"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"/>
    <Button
            android:text="@string/cancel_placeholder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_background"
            android:textColor="@color/login_form_detail"
            android:id="@+id/cancel_btn" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/recover_btn"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"/>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="170dp" app:srcCompat="@drawable/logo_img"
            android:id="@+id/logo_image" app:layout_constraintStart_toStartOf="@+id/guideline_left"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            android:layout_marginEnd="8dp" android:layout_marginTop="80dp" app:layout_constraintTop_toTopOf="parent"/>
</android.support.constraint.ConstraintLayout>