<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">


    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".presentation.patient_education.fragments.QuestionFragment">


        <TextView android:id="@+id/q1_lbl"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="¿Qué es la glucosa?"
                  android:textSize="16dp"
                  app:layout_constraintTop_toTopOf="parent"
                  android:layout_marginTop="24dp"
                  android:layout_marginStart="30dp"
                  android:layout_marginEnd="30dp"
        />

        <TextView android:id="@+id/answer1_lbl"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  app:layout_constraintTop_toBottomOf="@id/q1_lbl"
                  android:textSize="18sp"
                  android:layout_marginTop="6dp"
                  android:layout_marginStart="30dp"
                  android:layout_marginEnd="30dp"
                  android:textColor="#000"
                  android:text="@string/glucose_info"
        />

        <TextView android:id="@+id/q2_lbl"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="¿Qué es la insulina?"
                  android:textSize="16dp"
                  app:layout_constraintTop_toBottomOf="@id/answer1_lbl"
                  android:layout_marginTop="12dp"
                  android:layout_marginStart="30dp"
                  android:layout_marginEnd="30dp"
        />

        <TextView android:id="@+id/answer2_lbl"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  app:layout_constraintTop_toBottomOf="@id/q2_lbl"
                  android:textSize="18sp"
                  android:layout_marginTop="6dp"
                  android:layout_marginStart="30dp"
                  android:layout_marginEnd="30dp"
                  android:textColor="#000"
                  android:text="@string/insuline_info"
                  android:layout_marginBottom="20dp"
        />
        <TextView android:id="@+id/q3_lbl"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="¿Qué es un glucómetro?"
                  android:textSize="16dp"
                  app:layout_constraintTop_toBottomOf="@id/answer2_lbl"
                  android:layout_marginTop="1dp"
                  android:layout_marginStart="30dp"
                  android:layout_marginEnd="30dp"
        />

        <TextView android:id="@+id/answer3_lbl"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  app:layout_constraintTop_toBottomOf="@id/q3_lbl"
                  android:textSize="18sp"
                  android:layout_marginTop="6dp"
                  android:layout_marginStart="30dp"
                  android:layout_marginEnd="30dp"
                  android:textColor="#000"
                  android:text="@string/glucometer_info"
                  android:layout_marginBottom="20dp"
        />

        <TextView android:id="@+id/q4_lbl"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="¿Qué es un glucómetro capilar?"
                  android:textSize="16dp"
                  app:layout_constraintTop_toBottomOf="@id/answer3_lbl"
                  android:layout_marginTop="1dp"
                  android:layout_marginStart="30dp"
                  android:layout_marginEnd="30dp"
        />

        <TextView android:id="@+id/answer4_lbl"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  app:layout_constraintTop_toBottomOf="@id/q4_lbl"
                  android:textSize="18sp"
                  android:layout_marginTop="6dp"
                  android:layout_marginStart="30dp"
                  android:layout_marginEnd="30dp"
                  android:textColor="#000"
                  android:text="@string/glucometer2_info"
                  app:layout_constraintBottom_toBottomOf="parent"
                  android:layout_marginBottom="20dp"
        />

    </android.support.constraint.ConstraintLayout>



</android.support.v4.widget.NestedScrollView>