<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".presentation.treatments.fragments.FeedingFragment">


    <TextView
            android:text="@string/breakfast_label"
            android:textColor="@color/textColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/breakfast_label_id"
            android:textSize="18dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"/>
    <TextView
            android:text=""
            android:textColor="@color/textColor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/description_txt_edit"
            android:padding="16dp"
            android:id="@+id/description_tv_id" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/breakfast_label_id"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"/>

    <TextView
            android:text="@string/almuerzo_label"
            android:textColor="@color/textColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/description_label_id"
            android:textSize="18dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/description_tv_id" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"/>
    <TextView
            android:text=""
            android:textColor="@color/textColor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/description_txt_edit"
            android:padding="16dp"
            android:id="@+id/lunch_tv_id" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/description_label_id"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"/>

    <TextView
            android:text="@string/cena_label"
            android:textColor="@color/textColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:id="@+id/dinner_label_id"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/lunch_tv_id" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"/>
    <TextView
            android:text=""
            android:textColor="@color/textColor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/description_txt_edit"
            android:padding="16dp"
            android:id="@+id/dinner_tv_id" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/dinner_label_id"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"/>
</android.support.constraint.ConstraintLayout>